--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kJg-8p-u7B">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Camera-->
@@ -22,45 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dQN-QA-6ve" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="935" y="1002"/>
-        </scene>
-        <!--Friends-->
-        <scene sceneID="ThD-8y-nf0">
-            <objects>
-                <viewController id="cFk-TI-iTf" customClass="FriendListViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="qFu-82-Ext"/>
-                        <viewControllerLayoutGuide type="bottom" id="19a-uU-oIK"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="JMN-Ot-Rdy">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ml8-Z9-xui">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <items>
-                                    <navigationItem title="Friends" id="AED-bN-Bw7">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ifc-tt-tYT"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Chz-VX-GWR">
-                                <rect key="frame" x="0.0" y="44" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Ml8-Z9-xui" firstAttribute="leading" secondItem="JMN-Ot-Rdy" secondAttribute="leadingMargin" constant="-16" id="1kk-Me-v5h"/>
-                            <constraint firstItem="Ml8-Z9-xui" firstAttribute="top" secondItem="JMN-Ot-Rdy" secondAttribute="topMargin" id="2ea-Yw-FeC"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ml8-Z9-xui" secondAttribute="trailing" constant="-16" id="YIf-lR-z28"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Friends" image="Friends" id="5hL-jx-WTp"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ohf-fY-tqA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="213" y="1746"/>
+            <point key="canvasLocation" x="-505" y="1692"/>
         </scene>
         <!--Notifications-->
         <scene sceneID="ISn-95-3SU">
@@ -81,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WuQ-li-vVJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="933" y="1742"/>
+            <point key="canvasLocation" x="4005" y="1692"/>
         </scene>
         <!--Album-->
         <scene sceneID="xIY-eX-EhH">
@@ -100,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wq6-uh-y66" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="935" y="340"/>
+            <point key="canvasLocation" x="-1641" y="1692"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="O3A-iC-x94">
@@ -116,12 +77,127 @@
                         <segue destination="StI-Ir-0gR" kind="relationship" relationship="viewControllers" id="2MX-95-JSW"/>
                         <segue destination="Qfk-28-HbZ" kind="relationship" relationship="viewControllers" id="u96-LA-Drl"/>
                         <segue destination="wDP-Q2-zJQ" kind="relationship" relationship="viewControllers" id="miI-Hz-B5u"/>
-                        <segue destination="cFk-TI-iTf" kind="relationship" relationship="viewControllers" id="dXa-ZJ-wdS"/>
+                        <segue destination="TUf-Br-kU1" kind="relationship" relationship="viewControllers" id="oh3-qR-FVF"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MP5-us-lxk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="115" y="672"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="Cmz-0e-PZg">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="67W-aE-nXU" customClass="FriendListViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="69g-1E-GiI"/>
+                        <viewControllerLayoutGuide type="bottom" id="xWR-bm-QPb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9vA-DB-fuq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="x0a-s5-kza">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendListCell" textLabel="Twb-ED-XNh" style="IBUITableViewCellStyleDefault" id="vci-8u-F0Z" customClass="FriendListTableViewCell" customModule="PhotoZap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vci-8u-F0Z" id="hxd-If-cGA">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Twb-ED-XNh">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="Twb-ED-XNh" id="JS1-TW-hel"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="67W-aE-nXU" id="1Ga-3q-RVh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="x0a-s5-kza" firstAttribute="top" secondItem="69g-1E-GiI" secondAttribute="bottom" id="LLO-iK-q9m"/>
+                            <constraint firstAttribute="trailing" secondItem="x0a-s5-kza" secondAttribute="trailing" id="OE3-VP-HP8"/>
+                            <constraint firstItem="x0a-s5-kza" firstAttribute="leading" secondItem="9vA-DB-fuq" secondAttribute="leading" id="jqS-4Q-C0R"/>
+                            <constraint firstItem="xWR-bm-QPb" firstAttribute="top" secondItem="x0a-s5-kza" secondAttribute="bottom" id="uH5-Kk-WRo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Friends" id="kze-zB-qoA">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="9ql-aB-ye3">
+                            <connections>
+                                <segue destination="uCy-Cx-ZWI" kind="show" id="bXn-Fb-VBg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="x0a-s5-kza" id="uJN-o8-gps"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bUF-Vf-Np6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1297" y="1692"/>
+        </scene>
+        <!--Add Friends-->
+        <scene sceneID="IQH-dw-MWk">
+            <objects>
+                <viewController id="uCy-Cx-ZWI" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hp3-fU-Ldn"/>
+                        <viewControllerLayoutGuide type="bottom" id="7qV-MN-tQK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zZi-KT-mNI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="y87-Td-kI1">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="AxT-rN-gIy"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="y87-Td-kI1" firstAttribute="leading" secondItem="zZi-KT-mNI" secondAttribute="leading" id="G7Q-Hr-1B4"/>
+                            <constraint firstAttribute="trailing" secondItem="y87-Td-kI1" secondAttribute="trailing" id="HNn-5m-Rk4"/>
+                            <constraint firstItem="y87-Td-kI1" firstAttribute="top" secondItem="hp3-fU-Ldn" secondAttribute="bottom" id="akp-YU-JOT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Friends" id="9u0-ju-ywh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jgH-dB-7g3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2001" y="1692"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="IHl-SH-aTN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TUf-Br-kU1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Friends" image="Friends" id="rBN-WG-3aC"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="I55-Mb-iQz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="67W-aE-nXU" kind="relationship" relationship="rootViewController" id="1BJ-UB-AL4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="58F-jY-Nok" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="485" y="1692"/>
         </scene>
     </scenes>
     <resources>
